# devisermachine

./: .gitignore
compiler/: assembler.dvs  assemblertest.dvs
design/: filesystem  language
interpreter/: CMakeLists.txt  Makefile  console.cpp  console.hpp  deviser.cpp  deviser.hpp  lineeditor.cpp  lineeditor.hpp  main.cpp
interpreter/src/: bytecode.cpp  bytecode.hpp  deviser.cpp  deviser.hpp  gc.cpp  gc.hpp  main.cpp  types.hpp
interpreter/tests/: test.cpp
kernel-modules/: deviserlib.dvs  start.dvs  testsuite.dvs
modules/: start.dvs
scripts/: helloworld.dvs
